--- a/lhamidou-nuxt/assets/stylesheets/main.scss
+++ b/lhamidou-nuxt/assets/stylesheets/main.scss
@@ -1,3 +1,4 @@
 @import 'bootstrap/scss/bootstrap';
 @import url("primevue/resources/themes/aura-light-green/theme.css");
+@import '../fonts/fonts.scss';
 @import './styles.scss';
