--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -2,3 +2,5 @@
 @import url("primevue/resources/themes/aura-light-green/theme.css");
 @import '../fonts/fonts.scss';
 @import './styles.scss';
+@import './padding';
+@import './margin';
