--- a/assets/fonts/fonts.scss
+++ b/assets/fonts/fonts.scss
@@ -1,1 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Climate+Crisis&display=swap');
+
+// <uniquifier>: Use a unique and descriptive class name
+
+
