updtae hero section, add color, change font family

--- a/assets/stylesheets/_colors.scss
+++ b/assets/stylesheets/_colors.scss
@@ -7,3 +7,15 @@
     --clr-black: #151515;
     --clr-grey-light: #e3e3e3;
 }
+
+.background-purple {
+    background-color: var(--clr-purple);
+}
+
+.background-green {
+    background-color: var(--clr-green);
+}
+
+.background-green-flash {
+    background-color: var(--clr-green-flash);
+}
