--- a/assets/stylesheets/_margin.scss
+++ b/assets/stylesheets/_margin.scss
@@ -1,4 +1,8 @@
 
+.mt-30 {
+    margin-top: 30px;
+}
+
 .mb-30 {
     margin-bottom: 30px;
 }
@@ -10,3 +14,6 @@
 .mb-100 {
     margin-bottom: 100px;
 }
+
+
+
