--- a/assets/stylesheets/_styles.scss
+++ b/assets/stylesheets/_styles.scss
@@ -5,15 +5,15 @@
 }
 
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Fustat", sans-serif;
+    font-optical-sizing: auto;
     line-height: 1.6;
     background-color: #f4f4f4;
-    color: #333;
+    color: var(--clr-black);
 }
 
 .title {
-    font-size: clamp(1.7em, 28px, 3em);
-    
+    font-size: clamp(1.7em, 28px, 3em);    
     line-height: 1.2;
     margin-bottom: .9166666667em;
 }
