--- a/assets/stylesheets/_styles.scss
+++ b/assets/stylesheets/_styles.scss
@@ -8,7 +8,7 @@ body {
     font-family: "Fustat", sans-serif;
     font-optical-sizing: auto;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    background-color: var(--clr-grey-light);
     color: var(--clr-black);
 }
 
