change bg and color in footer component

--- a/assets/stylesheets/_colors.scss
+++ b/assets/stylesheets/_colors.scss
@@ -16,6 +16,10 @@
     color: var(--clr-orange);
 }
 
+.color-grey-light {
+    color: var(--clr-grey-light);
+}
+
 .background-black {
     background-color: var(--clr-black);
 }
