update hero section change bg to black

--- a/assets/stylesheets/_colors.scss
+++ b/assets/stylesheets/_colors.scss
@@ -8,6 +8,10 @@
     --clr-grey-light: #f0f0f0;
 }
 
+.color-green {
+    color: var(--clr-green);
+}
+
 .color-green-flash {
     color: var(--clr-green-flash);
 }
@@ -18,6 +22,10 @@
 
 .color-grey-light {
     color: var(--clr-grey-light);
+}
+
+.color-purple {
+    color: var(--clr-purple);
 }
 
 .background-black {
