create page mes realisation

--- a/assets/fonts/fonts.scss
+++ b/assets/fonts/fonts.scss
@@ -3,6 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Fustat:wght@200..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
 
-// <uniquifier>: Use a unique and descriptive class name
+.climate-crisis-regular-font {
+    font-family: "Climate Crisis", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "YEAR" 1979;
+}
 
 
