--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap/scss/bootstrap';
 @import url("primevue/resources/themes/aura-light-green/theme.css");
-@import '../fonts/fonts.scss';
+@import './fonts.scss';
 @import './styles.scss';
 @import './padding';
 @import './margin';
